Made some progress on the about me section and experience section almost done just need to add some details

--- a/ProfileStyleSheet.css
+++ b/ProfileStyleSheet.css
@@ -15,8 +15,8 @@
     position: absolute; 
     top: 0; 
     left: 0; 
-    width: 860px; 
-    height: 235px; 
+    width: 900px; 
+    height: 260px; 
     background-color: #9fb86c; 
     border-radius: 10px; 
     } 
@@ -83,7 +83,7 @@
 
 .square .text-wrapper-3 {
     position: absolute;
-    top: 65px;
+    top: 40px;
     left: 247px;
     width: 224px;
     font-family: "Inter-Regular", Helvetica;
@@ -238,3 +238,139 @@
         transform: rotate(-90deg); 
         opacity: 0.5; 
     }
+
+.square .jobrecommendation {
+    top: 3px;
+    position: absolute;
+    left: 0px;
+    width: 400px;
+    height: 275px;
+    background-color: #9fb86c;
+    border-radius: 10px;
+
+
+}
+
+.square .jobrecommendation2 {
+    top: 290px;
+    position: absolute;
+    left: 0px;
+    width: 400px;
+    height: 275px;
+    background-color: #9fb86c;
+    border-radius: 10px;
+
+
+}
+
+.square .jobrecommendation3 {
+    top: 575px;
+    position: absolute;
+    left: 0px;
+    width: 400px;
+    height: 275px;
+    background-color: #9fb86c;
+    border-radius: 10px;
+
+
+}
+
+.square .jobrecommendation4 {
+    top: 860px;
+    position: absolute;
+    left: 0px;
+    width: 400px;
+    height: 275px;
+    background-color: #9fb86c;
+    border-radius: 10px;
+
+
+}
+
+.square .scroll-bar {
+    top: 0px;
+    left: 1500px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    position: absolute;
+    width: 400px; 
+    height: 1075px; 
+    padding: 10px;
+   
+
+
+}
+
+
+
+
+.square .aboutme { 
+        position: absolute;
+        top: 240px;
+        left: -240px;
+        width: 150px;
+        font-family: "Inter-Bold", Helvetica;
+        font-weight: 700; 
+        color: #000000; 
+        font-size: 24px; 
+        letter-spacing: 0; 
+        line-height: normal; 
+        white-space: nowrap; 
+}
+
+.square .aboutmesection { 
+        position: absolute;
+        top: 280px;
+        left: -240px;
+        width: 900px;
+        height: 300px;
+        font-family: "Inter-Bold", Helvetica;
+        font-weight: 700; 
+        color: #000000; 
+        font-size: 24px; 
+        letter-spacing: 0; 
+        line-height: normal; 
+        overflow-wrap: break-word;
+        white-space: pre-wrap;
+        word-wrap: break-word;
+        border-radius: 10px;
+}
+
+.square .experience{
+    position: absolute;
+    top: 100px;
+    left: 300px;
+    background-color: #9fb86c;
+    width: 300px;
+    height: 100px;
+    border-radius: 10px;
+
+
+}
+
+.square .scroll-bar2 {
+    top: 800px;
+    left: 100x;
+    overflow-y: hidden;
+    overflow-x: scroll;
+    position: absolute;
+    width: 900px; 
+    height: 300px; 
+    padding: 10px;
+    border: #000000;
+    
+
+}
+
+.square .resume{
+    position: absolute;
+    top: 600px;
+    left: -240px;
+    background-color: #9fb86c;
+    width: 300px;
+    height: 100px;
+    border-radius: 10px;
+
+
+}
+
